--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ a{ color: inherit; text-decoration: none; }
   display: grid;
   place-items: center;
   overflow: hidden;
-  background-image: url("../assets/website_bg.jpg");
+  background-image: url("/assets/website_bg.jpg");
   background-size: cover;
   background-position: center;
 }
